[package]
name = "receipt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
hyper = "1.2"
uuid = {version = "1.7.0", features=["v4"] }
lazy_static = "1.4.0"
